--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>()-()Chan</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <img src="caramba-removebg-preview.png" alt="Logo do ()-()Chan">
+        <img src="logo.png" alt="Logo do ()-()Chan">
     </header>
     <div id="msgbox" class="msgbox">
         <h2>O que é o ()-()Chan?</h2>
