--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     </div>
     <div class="categorias">
         <h2>Categorias</h2>
-        <div class="categoria-lista">
-            <!-- Gerar as categorias dinamicamente com JavaScript -->
+        <div class="categoria-lista" id="categoria-lista">
+            <!-- Categorias serão adicionadas dinamicamente com JavaScript -->
+            <!-- bomdia -->
         </div>
     </div>
     <script src="script.js"></script>
