--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
     <script src="script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const categorias = ["Anime", "Manga", "Tecnologia", "Jogos", "Esportes", "Filmes", "Música", "Literatura", "Culinária", "Viagens"];
+            const categorias = ["Anime", "Manga", "Tecnologia", "Jogos", "Esportes",
+        "Filmes", "Música", "Literatura", "Culinária", "Viagens",
+        "Ciência", "História", "Arte", "Fotografia", "Moda",
+        "Natureza", "Carros", "Saúde", "Fitness", "Política",
+        "Economia", "Educação", "Animais", "Filosofia", "Religião",
+        "Humor", "Memes", "Notícias", "Eventos", "DIY",
+        "Cosplay", "Programação", "Design", "Arquitetura", "Poesia",
+        "Crítica", "Astrologia", "Psicologia", "Sociologia", "Antropologia",
+        "Astronomia", "Física", "Química", "Biologia", "Geografia",
+        "Medicina", "Engenharia", "Matemática", "Robótica", "Inteligência Artificial",
+        "Hardware", "Software", "Internet", "Cultura Pop", "K-Pop",
+        "Quadrinhos", "Novelas", "Teatro", "Dança", "Pintura",
+        "Escultura", "Graffiti", "Histórias em Quadrinhos", "Webcomics", "Fanfics",
+        "Literatura Fantástica", "História Alternativa", "História Real", "Mistério", "Terror",
+        "Romance", "Aventura", "Ficção Científica", "Clássicos", "Contos",
+        "Microcontos", "Ensaios", "Biografias", "Documentários", "Séries de TV",
+        "Programas de TV", "Animações", "Curta-Metragens", "Filmes Clássicos", "Indie",
+        "Produção Musical", "Instrumentos", "Concertos", "Festivais", "Análises",
+        "Tutoriais", "Resenhas", "Opiniões", "Críticas", "Entrevistas",
+        "Podcast", "Audiolivros", "E-books", "Aplicativos", "Redes Sociais"];
 
             // Fechar a msgbox
             window.fecharMsgbox = function () {
@@ -49,4 +68,3 @@
     </script>
 </body>
 </html>
-
